--- a/_includes/body/analytics.html
+++ b/_includes/body/analytics.html
@@ -1,43 +1,8 @@
 {% if site.google_analytics %}
-  <script>!function(w, d) {
-    w.ga=w.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-
-    /*{% if site.hydejack.cookies_banner %}*/
-      if (navigator.CookiesOK) {
-        ga('create', '{{ site.google_analytics }}', 'auto');
-      } else if (d.cookie.indexOf("hy--cookies-ok=true") > -1) {
-        ga('create', '{{ site.google_analytics }}', {
-          'storage': 'none',
-          'clientId': localStorage ? localStorage.getItem('ga--client-id') : undefined
-        });
-      } else {
-        ga('create', '{{ site.google_analytics }}', {
-          'storage': 'none'
-        });
-        ga('set', 'forceSSL', true);
-        ga('set', 'anonymizeIp', true);
-      }
-    /*{% else %}*/
-      ga('create', '{{ site.google_analytics }}', 'auto');
-    /*{% endif %}*/
-
-    var pushStateEl = d.getElementById('_pushState');
-    var timeoutId;
-    pushStateEl.addEventListener('hy-push-state-load', function() {
-      w.clearTimeout(timeoutId);
-      timeoutId = w.setTimeout(function() {
-        ga('set', 'page', w.location.pathname);
-        ga('send', 'pageview');
-      }, 500);
-    });
-
-    d.addEventListener('hy--cookies-ok', function () {
-      w.ga(function(tracker) {
-        w.ga("set", "anonymizeIp", undefined);
-        localStorage && localStorage.setItem("ga--client-id", tracker.get("clientId"));
-      });
-    });
-
-    w.loadJSDeferred('https://www.google-analytics.com/analytics.js');
-  }(window, document);</script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});
+  var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;
+  j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','{{ site.google_analytics }}');</script>
+  <!-- End Google Tag Manager -->
 {% endif %}
