--- a/_includes/head/links-static.html
+++ b/_includes/head/links-static.html
@@ -14,7 +14,7 @@
 {% endif %}
 
 {% if site.google_analytics %}
-  <link rel="dns-prefetch" href="https://www.google-analytics.com">
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.google_analytics }}" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 {% endif %}
 
 <link rel="preload" href="{{ '/assets/img/swipe.svg' | relative_url }}" as="image" id="_hrefSwipeSVG">
