Commented google tag manager

--- a/_includes/head/links-static.html
+++ b/_includes/head/links-static.html
@@ -13,9 +13,9 @@
   {%- endif -%}
 {% endif %}
 
-{% if site.google_analytics_tag_manager %}
+<!-- {% if site.google_analytics_tag_manager %}
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.google_analytics_tag_manager }}" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-{% endif %}
+{% endif %} -->
 
 {% if site.google_analytics %}
 <link rel="preconnect" href="https://www.google-analytics.com" crossorigin="use-credentials">
