--- a/_includes/body/analytics.html
+++ b/_includes/body/analytics.html
@@ -1,11 +1,11 @@
-{% if site.google_analytics_tag_manager %}
+<!-- {% if site.google_analytics_tag_manager %} -->
 <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});
+<!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});
   var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;
   j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','{{ site.google_analytics_tag_manager }}');</script>
+  })(window,document,'script','dataLayer','{{ site.google_analytics_tag_manager }}');</script> -->
   <!-- End Google Tag Manager -->
-{% endif %}
+<!-- {% endif %} -->
 
 {% if site.google_analytics %}
 <!-- google analytics -->
