--- a/_includes/body/analytics.html
+++ b/_includes/body/analytics.html
@@ -8,8 +8,15 @@
 <!-- {% endif %} -->
 
 {% if site.google_analytics %}
-<!-- google analytics -->
-<script defer="" src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', '{{ site.google_analytics }}');
+</script>
 <!--  google analytics -->
 {% endif %}
 
