--- a/_includes/head/links-static.html
+++ b/_includes/head/links-static.html
@@ -17,12 +17,12 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.google_analytics_tag_manager }}" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 {% endif %} -->
 
-{% if site.google_analytics %}
+<!-- {% if site.google_analytics %}
 <link rel="preconnect" href="https://www.google-analytics.com" crossorigin="use-credentials">
 <link rel="dns-prefetch" href="https://www.google-analytics.com">
 <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin="anonymous">
 <link rel="dns-prefetch" href="https://www.googletagmanager.com">
-{% endif %}
+{% endif %} -->
 
 <link rel="preload" href="{{ '/assets/img/swipe.svg' | relative_url }}" as="image" id="_hrefSwipeSVG">
 
