--- a/_includes/body/analytics.html
+++ b/_includes/body/analytics.html
@@ -18,5 +18,14 @@
   gtag('config', '{{ site.google_analytics }}');
 </script>
 <!--  google analytics -->
+
+<!--  Microsoft Clarity -->
+<script type="text/javascript">(function(c,l,a,r,i,t,y){c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+      t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+      y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+  })(window, document, "clarity", "script", "jzbd1m0syn");
+</script>
+<!--  Microsoft Clarity -->
+
 {% endif %}
 
