Refactor conference layout to use 'project' terminology and update includes for better clarity

--- a/_layouts/conference.html
+++ b/_layouts/conference.html
@@ -96,7 +96,7 @@ layout: base
 {% when 'newsletter' %}
 {% include if-non-null try="pro/newsletter.html" %}
 {% when 'other' %}
-{% include if-non-null try="pro/other-conferences.html" %}
+{% include if-non-null try="pro/other-projects.html" %}
 {% when 'comments' %}
 {% include body/comments.html %}
 {% else %}
