--- a/_layouts/conferences.html
+++ b/_layouts/conferences.html
@@ -15,8 +15,8 @@ layout: page
 
 {% assign prev_date = 0 %}
 {% if page.no_groups %}<div class="columns {% unless no_third_column %}columns-break{% endunless %}">{% endif %}
-{% for conference in ordered_conferences %}
-  {% assign current_date = conference.date | date:conferences_group_by %}
+{% for project in ordered_conferences %}
+  {% assign current_date = project.date | date:conferences_group_by %}
 
   {% unless page.no_groups %}{% if current_date != prev_date %}
     {% unless forloop.first %}</div>{% endunless %}
@@ -26,9 +26,9 @@ layout: page
     {% assign prev_date = current_date %}
   {% endif %}{% endunless %}
 
-  {% assign featured = page.featured | default:conference.featured | default:page.big_conference | default:conference.big_conference %}
+  {% assign featured = page.featured | default:project.featured | default:page.big_project | default:project.big_project %}
   <div class="column {% if featured %}column-1{% else %}column-1-2{% endif %}">
-    {% include_cached pro/conference-card.html conference=conference featured=featured %}
+    {% include_cached pro/project-card.html project=project featured=featured %}
   </div>
 
   {% if forloop.last %}</div>{% endif %}
